Fix buttons in Style options clipping on Windows

--- a/skin/classic/options.css
+++ b/skin/classic/options.css
@@ -19,7 +19,7 @@ a
 }
 
 #css-setting-links {
-    margin: 7px 0;
+    margin: 4px 0 7px 0;
 }
 #css-setting-links a {
     margin: 6px;
